add: Cloudflare Workers Support (#1)

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 
 /*.DS_Store
 
-/rsp-registry*.json
-/rsp-config*.json
-/rsp-report*.log
+**/rsp-registry.json
+**/rsp-config.json
+**/rsp-report.log
 
 *.pem
