--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,13 +6,13 @@ before:
   hooks:
     - go mod tidy
     - go generate ./...
-    - ./scripts/download-rsp-registry.py
+    - python ./scripts/download-rsp-registry.py
 
 builds:
   - id: rsp-dump
     main: ./cmd/rsp-dump
     binary: rsp-dump
-    goos: [ linux ]
+    goos: [ linux, windows ]
     goarch: [ amd64, arm64 ]
     env: [ CGO_ENABLED=0 ]
     flags: [ -trimpath ]
