--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,10 @@
 {
+  "$schema": "./node_modules/wrangler/config-schema.json",
   "name": "rsp-dump",
   "main": "./dist/rsp-dump-cf-workers_js_wasm/worker.mjs",
   "compatibility_date": "2025-11-10",
   "build": {
-    "command": "yarn run build"
+    "command": "yarn run build -- go"
   },
   "observability": {
     "logs": {
